--- a/doc/Esterni/Analisi_dei_requisiti/Analisi_dei_requisiti_0_0_0.tex
+++ b/doc/Esterni/Analisi_dei_requisiti/Analisi_dei_requisiti_0_0_0.tex
@@ -1943,7 +1943,7 @@ l'attore visualizza un messaggio d'errore sull'inserimento dei dati (UC5.1.4.1);
 \begin{itemize}
 \item \textbf{Attori}: Utente;\item \textbf{Scenario principale}:
 
-\item \textbf{Descrizione}: l'atl'attore ha selezionato il blocco metodo da modificare e il sistema visualizza il form di inserimento dati ;	
+\item \textbf{Descrizione}: l'attore ha selezionato il blocco metodo da modificare e il sistema visualizza il form di inserimento dati ;	
 \item \textbf{Postcondizione}: il sistema visualizza il blocco metodo modificato;	
 \item \textbf{Scenario principale}:
 \begin{enumerate}
@@ -2672,208 +2672,309 @@ l'attore visualizza un messaggio d'errore.
 & &\hyperref[UC5.1]{UC5.1}\\ \hline
 
 \hypertarget{RFO4.1.1}{RFO4.1.1} & l'attore può creare ed inizializzare una variabile assegnandole un valore & \hyperlink{Interno}{Interno}\\
-& \hyperref[UC5.1]{UC5.1}\\
-& \hyperref[UC5.1.1]{UC5.1.1}\\ \hline
+& &\hyperref[UC5.1]{UC5.1}\\
+& &\hyperref[UC5.1.1]{UC5.1.1}\\ \hline
 
 \hypertarget{RFO4.1.2}{RFO4.1.2} & l'attore può assegnare un valore ad una variabile esistente e visibile & \hyperlink{Interno}{Interno}\\
-& \hyperref[UC5.1]{UC5.1}\\
-& \hyperref[UC5.1.2]{UC5.1.2}\\ \hline
+& &\hyperref[UC5.1]{UC5.1}\\
+& &\hyperref[UC5.1.2]{UC5.1.2}\\ \hline
 
 \hypertarget{RFO4.1.3}{RFO4.1.3} & l'attore può inserire un commento per il blocco variabile & \hyperlink{Interno}{Interno}\\
-& \hyperref[UC5.1]{UC5.1}\\
-& \hyperref[UC5.1.3]{UC5.1.3}\\ \hline
+& &\hyperref[UC5.1]{UC5.1}\\
+& &\hyperref[UC5.1.3]{UC5.1.3}\\ \hline
 
 \hypertarget{RFO4.1.4}{RFO4.1.4} & l'attore può confermare l'inserimento del blocco variabile &\hyperlink{Interno}{Interno}\\
-& \hyperref[UC5.1]{UC5.1}\\
-& \hyperref[UC5.1.4]{UC5.1.4}\\ \hline
+& &\hyperref[UC5.1]{UC5.1}\\
+& &\hyperref[UC5.1.4]{UC5.1.4}\\ \hline
 
 \hypertarget{RFO4.1.4.1}{RFO4.1.4.1} & il sistema deve visualizzare un messaggio d'errore se l'attore non ha fornito la variabile da inizializzare, non ha fornito un valore da assegnare alla variabile o non ha inserito un commento. & \hyperlink{Interno}{Interno}\\
-& \hyperref[UC5.1.4]{UC5.1.4}\\
-& \hyperref[UC5.1.4.1]{UC5.1.4.1}\\ \hline
+& &\hyperref[UC5.1.4]{UC5.1.4}\\
+& &\hyperref[UC5.1.4.1]{UC5.1.4.1}\\ \hline
 
 \hypertarget{RFO4.2}{RFO4.2} & l'attore può inserire un blocco metodo & \hyperlink{Riunione Esterna}{Riunione Esterna}\\
-& \hyperref[UC5]{UC5}\\
-& \hyperref[UC5.2]{UC5.2}\\ \hline
+& &\hyperref[UC5]{UC5}\\
+& &\hyperref[UC5.2]{UC5.2}\\ \hline
 
 \hypertarget{RFO4.2.1}{RFO4.2.1} & l'attore può invocare un metodo tra quelli disponibili & \hyperlink{Interno}{Interno}\\
-& \hyperref[UC5.2]{UC5.2}\\
-& \hyperref[UC5.2.1]{UC5.2.1}\\ \hline
+& &\hyperref[UC5.2]{UC5.2}\\
+& &\hyperref[UC5.2.1]{UC5.2.1}\\ \hline
 
 \hypertarget{RFO4.2.2}{RFO4.2.2} & l'attore può inserire un commento per il blocco metodo & \hyperlink{Interno}{Interno}\\
-& \hyperref[UC5.2]{UC5.2}\\
-& \hyperref[UC5.2.2]{UC5.2.2}\\ \hline
+& &\hyperref[UC5.2]{UC5.2}\\
+& &\hyperref[UC5.2.2]{UC5.2.2}\\ \hline
 
 \hypertarget{RFO4.2.3}{RFO4.2.3} & l'attore può confermare l'inserimento del blocco metodo & \hyperlink{Interno}{Interno}\\
-& \hyperref[UC5.2]{UC5.2}\\
-& \hyperref[UC5.2.3]{UC5.2.3}\\ \hline
+& &\hyperref[UC5.2]{UC5.2}\\
+& &\hyperref[UC5.2.3]{UC5.2.3}\\ \hline
 
 \hypertarget{RFO4.2.3.1}{RFO4.2.3.1} & il sistema deve visualizzare un messaggio d'errore se l'attore non ha fornito un metodo da inserire o non ha inserito un commento & \hyperlink{Interno}{Interno}\\
-& \hyperref[UC5.2.3]{UC5.2.3}\\
-& \hyperref[UC5.2.3.1]{UC5.2.3.1}\\ \hline
+& &\hyperref[UC5.2.3]{UC5.2.3}\\
+& &\hyperref[UC5.2.3.1]{UC5.2.3.1}\\ \hline
 
 \hypertarget{RFO4.3}{RFO4.3} & l'attore può inserire un blocco if/else & \hyperlink{Riunione Esterna}{Riunione Esterna}\\
-& \hyperref[UC5]{UC5}\\
-& \hyperref[UC5.3]{UC5.3}\\ \hline
+& &\hyperref[UC5]{UC5}\\
+& &\hyperref[UC5.3]{UC5.3}\\ \hline
 
 \hypertarget{RFO4.3.1}{RFO4.3.1} & l'attore può inserire la condizione da verificare del blocco if & \hyperlink{Interno}{Interno}\\
-& \hyperref[UC5.3]{UC5.3}\\
-& \hyperref[UC5.3.1]{UC5.3.1}\\ \hline
+& &\hyperref[UC5.3]{UC5.3}\\
+& &\hyperref[UC5.3.1]{UC5.3.1}\\ \hline
 
 \hypertarget{RFO4.3.2}{RFO4.3.2} & l'attore può completare il corpo del blocco if, inserendo una serie di blocchi tra quelli resi disponibili dall'editor  & \hyperlink{Interno}{Interno}\\
-& \hyperref[UC5.3]{UC5.3}\\
-& \hyperref[UC5.3.2]{UC5.3.2}\\ \hline
+& &\hyperref[UC5.3]{UC5.3}\\
+& &\hyperref[UC5.3.2]{UC5.3.2}\\ \hline
 
-\hypertarget{RFO4.3.3}{RFO4.3.3} & l'attore può completare il corpo del blocco else, inserendo una serie di blocchi tra quelli resi disponibili dall'editor  & \hyperlink{Interno}{Interno}\\
-& \hyperref[UC5.3]{UC5.3}\\
-& \hyperref[UC5.3.3]{UC5.3.3}\\ \hline
+\hypertarget{RFO4.3.3}{RFO4.3.3} & l'attore può completare il corpo del blocco else, inserendo una serie di blocchi tra quelli resi disponibili dall'editor   &\hyperlink{Interno}{Interno}\\
+& &\hyperref[UC5.3]{UC5.3}\\
+& &\hyperref[UC5.3.3]{UC5.3.3}\\ \hline
 
 \hypertarget{RFO4.3.4}{RFO4.3.4} & l'attore deve inserire un commento per il blocco if/else & \hyperlink{Interno}{Interno}\\
-& \hyperref[UC5.3]{UC5.3}\\
-& \hyperref[UC5.3.4]{UC5.3.4}\\ \hline
+& &\hyperref[UC5.3]{UC5.3}\\
+& &\hyperref[UC5.3.4]{UC5.3.4}\\ \hline
 
 \hypertarget{RFO4.3.5}{RFO4.3.5} & l'attore può confermare l'inserimento del blocco if/else & \hyperlink{Interno}{Interno}\\
-& \hyperref[UC5.3]{UC5.3}\\
-& \hyperref[UC5.3.5]{UC5.3.5}\\ \hline
+& &\hyperref[UC5.3]{UC5.3}\\
+& &\hyperref[UC5.3.5]{UC5.3.5}\\ \hline
 
 \hypertarget{RFO4.3.5.1}{RFO4.3.5.1} & il sistema visualizza un messaggio d'errore se l'attore non ha fornito la condizione da verificare o non ha inserito un commento & \hyperlink{Interno}{Interno}\\
-& \hyperref[UC5.3.5]{UC5.3.5}\\
-& \hyperref[UC5.3.5.1]{UC5.3.5.1}\\ \hline
+& &\hyperref[UC5.3.5]{UC5.3.5}\\
+& &\hyperref[UC5.3.5.1]{UC5.3.5.1}\\ \hline
 
 \hypertarget{RFO4.4}{RFO4.4} & l'attore può inserire un blocco while & \hyperlink{Riunione Esterna}{Riunione Esterna}\\
-& \hyperref[UC5]{UC5}\\
-& \hyperref[UC5.4]{UC5.4}\\ \hline
+& &\hyperref[UC5]{UC5}\\
+& &\hyperref[UC5.4]{UC5.4}\\ \hline
 
 \hypertarget{RFO4.4.1}{RFO4.4.1} & l'attore può inserire la condizione da verificare del blocco while & \hyperlink{Interno}{Interno}\\
-& \hyperref[UC5.4]{UC5.4}\\
-& \hyperref[UC5.4.1]{UC5.4.1}\\ \hline
+& &\hyperref[UC5.4]{UC5.4}\\
+& &\hyperref[UC5.4.1]{UC5.4.1}\\ \hline
 
 \hypertarget{RFO4.4.2}{RFO4.4.2} & l'attore può completare il corpo del blocco while, inserendo una serie di blocchi tra quelli resi disponibili dall'editor & \hyperlink{Interno}{Interno}\\
-& \hyperref[UC5.4]{UC5.4}\\
-& \hyperref[UC5.4.2]{UC5.4.2}\\ \hline
+& &\hyperref[UC5.4]{UC5.4}\\
+& &\hyperref[UC5.4.2]{UC5.4.2}\\ \hline
 
 \hypertarget{RFO4.4.3}{RFO4.4.3} & l'attore può inserire un commento per il blocco while & \hyperlink{Interno}{Interno}\\
-& \hyperref[UC5.4]{UC5.4}\\
-& \hyperref[UC5.4.3]{UC5.4.3}\\ \hline
+& &\hyperref[UC5.4]{UC5.4}\\
+& &\hyperref[UC5.4.3]{UC5.4.3}\\ \hline
 
 \hypertarget{RFO4.4.4}{RFO4.4.4} & l'attore può confermare l'inserimento del blocco while & \hyperlink{Interno}{Interno}\\
-& \hyperref[UC5.4]{UC5.4}\\
-& \hyperref[UC5.4.4]{UC5.4.4}\\ \hline
+& &\hyperref[UC5.4]{UC5.4}\\
+& &\hyperref[UC5.4.4]{UC5.4.4}\\ \hline
 
 \hypertarget{RFO4.4.4.1}{RFO4.4.4.1} & il sistema deve visualizzare un messaggio d'errore se l'attore non ha fornito la condizione da verificare o non ha inserito un commento. &\hyperlink{Interno}{Interno}\\
-& \hyperref[UC5.4.4]{UC5.4.4}\\
-& \hyperref[UC5.4.4.1]{UC5.4.4.1}\\ \hline
+& &\hyperref[UC5.4.4]{UC5.4.4}\\
+& &\hyperref[UC5.4.4.1]{UC5.4.4.1}\\ \hline
 
 \hypertarget{RFO4.5}{RFO4.5} & l'attore può inserire un blocco for &  \hyperlink{Riunione Esterna}{Riunione Esterna}\\
-& \hyperref[UC5]{UC5}\\
-& \hyperref[UC5.5]{UC5.5}\\ \hline
+& &\hyperref[UC5]{UC5}\\
+& &\hyperref[UC5.5]{UC5.5}\\ \hline
 
 \hypertarget{RFO4.5.1}{RFO4.5.1} & l'attore può inserire l'inizializzazione del blocco for & \hyperlink{Interno}{Interno}\\
-& \hyperref[UC5.5]{UC5.5}\\
-& \hyperref[UC5.5.1]{UC5.5.1}\\ \hline
+& &\hyperref[UC5.5]{UC5.5}\\
+& &\hyperref[UC5.5.1]{UC5.5.1}\\ \hline
 
 \hypertarget{RFO4.5.2}{RFO4.5.2} & l'attore può inserire la condizione da verificare del blocco for & \textcolor{red}{\textit{Non Soddisfatto}}\\ \hline \hyperlink{Interno}{Interno}\\
-& \hyperref[UC5.5]{UC5.5}\\
-& \hyperref[UC5.5.2]{UC5.5.2}\\ \hline
+& &\hyperref[UC5.5]{UC5.5}\\
+& &\hyperref[UC5.5.2]{UC5.5.2}\\ \hline
 
 \hypertarget{RFO4.5.3}{RFO4.5.3} & l'attore può inserire l'incremento/decremento del blocco for & \hyperlink{Interno}{Interno}\\
-& \hyperref[UC5.5]{UC5.5}\\
-& \hyperref[UC5.5.3]{UC5.5.3}\\ \hline
+& &\hyperref[UC5.5]{UC5.5}\\
+& &\hyperref[UC5.5.3]{UC5.5.3}\\ \hline
 
-\hypertarget{RFO4.5.4}{RFO4.5.4} & l'attore può completare il corpo del blocco for, inserendo una serie di blocchi tra quelli resi disponibili dall'editor & \hyperlink{Interno}{Interno}\\
-& \hyperref[UC5.5]{UC5.5}\\
-& \hyperref[UC5.5.4]{UC5.5.4}\\ \hline
+\hypertarget{RFO4.5.4}{RFO4.5.4} & l'attore può completare il corpo del blocco for, inserendo una serie di blocchi tra quelli resi disponibili dall'editor  &\hyperlink{Interno}{Interno}\\
+& &\hyperref[UC5.5]{UC5.5}\\
+& &\hyperref[UC5.5.4]{UC5.5.4}\\ \hline
 
 \hypertarget{RFO4.5.5}{RFO4.5.5} & l'attore può inserire un commento per il blocco for & \hyperlink{Interno}{Interno}\\
-& \hyperref[UC5.5]{UC5.5}\\
-& \hyperref[UC5.5.5]{UC5.5.5}\\ \hline
+& &\hyperref[UC5.5]{UC5.5}\\
+& &\hyperref[UC5.5.5]{UC5.5.5}\\ \hline
 
 \hypertarget{RFO4.5.6}{RFO4.5.6} & l'attore può confermare l'inserimento del blocco for &  \hyperlink{Interno}{Interno}\\
-& \hyperref[UC5.5]{UC5.5}\\
-& \hyperref[UC5.5.6]{UC5.5.6}\\ \hline
+& &\hyperref[UC5.5]{UC5.5}\\
+& &\hyperref[UC5.5.6]{UC5.5.6}\\ \hline
 
 \hypertarget{RFO4.5.6.1}{RFO4.5.6.1} & il sistema deve visualizzare un messaggio d'errore se l'attore non ha fornito la condizione da verificare, non ha fornito l'incremento/decremento o non ha inserito un commento & \hyperlink{Interno}{Interno}\\
-& \hyperref[UC5.5.6]{UC5.5.6}\\
-& \hyperref[UC5.5.6.1]{UC5.5.6.1}\\ \hline
+& &\hyperref[UC5.5.6]{UC5.5.6}\\
+& &\hyperref[UC5.5.6.1]{UC5.5.6.1}\\ \hline
 
 \hypertarget{RFO4.6}{RFO4.6} & l'attore può inserire un blocco custom di codice & \hyperlink{Riunione Esterna}{Riunione Esterna}\\
-& \hyperref[UC5]{UC5}\\
-& \hyperref[UC5.6]{UC5.6}\\ \hline
+& &\hyperref[UC5]{UC5}\\
+& &\hyperref[UC5.6]{UC5.6}\\ \hline
 
 \hypertarget{RFO4.6.1}{RFO4.6.1} & l'attore può inserire il contenuto del blocco custom & \hyperlink{Interno}{Interno}\\
-& \hyperref[UC5.6]{UC5.6}\\
-& \hyperref[UC5.6.1]{UC5.6.1}\\ \hline
+& &\hyperref[UC5.6]{UC5.6}\\
+& &\hyperref[UC5.6.1]{UC5.6.1}\\ \hline
 
 \hypertarget{RFO4.6.2}{RFO4.6.2} & l'attore può inserire un commento per il blocco custom & \hyperlink{Interno}{Interno}\\
-& \hyperref[UC5.6]{UC5.6}\\
-& \hyperref[UC5.6.2]{UC5.6.2}\\ \hline
+& &\hyperref[UC5.6]{UC5.6}\\
+& &\hyperref[UC5.6.2]{UC5.6.2}\\ \hline
 
 \hypertarget{RFO4.6.3}{RFO4.6.3} & l'attore può confermare l'inserimento del blocco custom &\hyperlink{Interno}{Interno}\\
-& \hyperref[UC5.6]{UC5.6}\\
-& \hyperref[UC5.6.3]{UC5.6.3}\\ \hline
+& &\hyperref[UC5.6]{UC5.6}\\
+& &\hyperref[UC5.6.3]{UC5.6.3}\\ \hline
 
-\hypertarget{RFO4.7}{RFO4.7} & \hyperlink{Interno}{Interno}\\
-& \hyperref[UC5]{UC5}\\
-& & \hyperref[UC5.7]{UC5.7}\\ \hline
+\hypertarget{RFO4.7}{RFO4.7} & l'attore può rimuovere un blocco variabile &\hyperlink{Interno}{Interno}\\
+& &\hyperref[UC5]{UC5}\\
+& &\hyperref[UC5.7]{UC5.7}\\ \hline
 
 \hypertarget{RFO4.8}{RFO4.8} & l'attore può rimuovere un blocco metodo & \hyperlink{Interno}{Interno}\\
-& \hyperref[UC5]{UC5}\\
-& \hyperref[UC5.8]{UC5.8}\\ \hline
+& &\hyperref[UC5]{UC5}\\
+& &\hyperref[UC5.8]{UC5.8}\\ \hline
 
 \hypertarget{RFO4.9}{RFO4.9} & l'attore può rimuovere un blocco if/else & \hyperlink{Interno}{Interno}\\
-& \hyperref[UC5]{UC5}\\
-& \hyperref[UC5.9]{UC5.9}\\ \hline
+& &\hyperref[UC5]{UC5}\\
+& &\hyperref[UC5.9]{UC5.9}\\ \hline
 
-\hypertarget{RFO4.10}{RFO4.10} & \hyperlink{Interno}{Interno}\\
-& \hyperref[UC5]{UC5}\\
+\hypertarget{RFO4.10}{RFO4.10} & l'attore può rimuovere un blocco while & \hyperlink{Interno}{Interno}\\
+& &\hyperref[UC5]{UC5}\\
 & & \hyperref[UC5.10]{UC5.10}\\ \hline
 
 \hypertarget{RFO4.11}{RFO4.11} & l'attore può rimuovere un blocco for & \hyperlink{Interno}{Interno}\\
-& \hyperref[UC5]{UC5}\\
-& \hyperref[UC5.11]{UC5.11}\\ \hline
+& &\hyperref[UC5]{UC5}\\
+& &\hyperref[UC5.11]{UC5.11}\\ \hline
 
 \hypertarget{RFO4.12}{RFO4.12} & l'attore può rimuovere un blocco custom & \hyperlink{Interno}{Interno}\\
-& \hyperref[UC5]{UC5}\\
-& \hyperref[UC5.12]{UC5.12}\\ \hline
+& &\hyperref[UC5]{UC5}\\
+& &\hyperref[UC5.12]{UC5.12}\\ \hline
 
 \hypertarget{RFD4.13}{RFD4.13} & l'attore può ridurre il blocco if/else & \hyperlink{Interno}{Interno}\\
-& \hyperref[UC5]{UC5}\\
-& \hyperref[UC5.12]{UC5.12}\\ \hline
+& &\hyperref[UC5]{UC5}\\
+& &\hyperref[UC5.12]{UC5.12}\\ \hline
 
 \hypertarget{RFD4.14}{RFD4.14} & l'attore può espandere il blocco if/else & \hyperlink{Riunione Esterna}{Riunione Esterna}\\
-& \hyperref[UC5]{UC5}\\
-& \hyperref[UC5.14]{UC5.14}\\ \hline
+& &\hyperref[UC5]{UC5}\\
+& &\hyperref[UC5.14]{UC5.14}\\ \hline
 
 \hypertarget{RFD4.15}{RFD4.15} & l'attore può ridurre il blocco while & \hyperlink{Riunione Esterna}{Riunione Esterna}\\
-& \hyperref[UC5]{UC5}\\
-& \hyperref[UC5.15]{UC5.15}\\ \hline
+& &\hyperref[UC5]{UC5}\\
+& &\hyperref[UC5.15]{UC5.15}\\ \hline
 
 \hypertarget{RFD4.16}{RFD4.16} & l'attore può espandere il blocco while & \hyperlink{Riunione Esterna}{Riunione Esterna}\\
-& \hyperref[UC5]{UC5}\\
-& \hyperref[UC5.16]{UC5.16}\\ \hline
+& &\hyperref[UC5]{UC5}\\
+& &\hyperref[UC5.16]{UC5.16}\\ \hline
 
-\hypertarget{RFD4.17}{RFD4.17} & \hyperlink{Riunione Esterna}{Riunione Esterna}\\
-& \hyperref[UC5]{UC5}\\
+\hypertarget{RFD4.17}{RFD4.17} & l'attore può ridurre il blocco for & \hyperlink{Riunione Esterna}{Riunione Esterna}\\
+& &\hyperref[UC5]{UC5}\\
 & & \hyperref[UC5.17]{UC5.17}\\ \hline
 
 \hypertarget{RFD4.18}{RFD4.18} & l'attore può espandere il blocco for &  \hyperlink{Riunione Esterna}{Riunione Esterna}\\
-& \hyperref[UC5]{UC5}\\
-& \hyperref[UC5.18]{UC5.18}\\ \hline
+& &\hyperref[UC5]{UC5}\\
+& &\hyperref[UC5.18]{UC5.18}\\ \hline
 
 \hypertarget{RFD4.19}{RFD4.19} & l'attore può spostare uno dei blocchi inseriti all'interno del diagramma delle attività gestito in una nuova posizione &  \hyperlink{Interno}{Interno}\\
-& \hyperref[UC5]{UC5}\\
-& \hyperref[UC5.19]{UC5.19}\\ \hline
+& &\hyperref[UC5]{UC5}\\
+& &\hyperref[UC5.19]{UC5.19}\\ \hline
 
 \hypertarget{RFD4.20}{RFD4.20} & l'attore può modificare un blocco variabile &  \hyperlink{Interno}{Interno}\\
-& \hyperref[UC5]{UC5}\\
-& \hyperref[UC5.20]{UC5.20}\\ \hline
+& &\hyperref[UC5]{UC5}\\
+& &\hyperref[UC5.20]{UC5.20}\\ \hline
 
-\hypertarget{RFD4.20.1}{RFD4.20.1} & l'attore può modificare il nome del blocco variabile &  \hyperlink{Interno}{Interno}\\
-& \hyperref[UC5.20]{UC5.20}\\
-& \hyperref[UC5.20.1]{UC5.20.1}\\ \hline
+\hypertarget{RFD4.20.1}{RFD4.20.1} & l'attore può modificare il nome della variabile relativa al blocco variabile &  \hyperlink{Interno}{Interno}\\
+& &\hyperref[UC5.20]{UC5.20}\\
+& &\hyperref[UC5.20.1]{UC5.20.1}\\ \hline
 
-\hypertarget{RFD4.20.1}{RFD4.20.1} & l'attore può modificare il nome del blocco variabile &  \hyperlink{Interno}{Interno}\\
-& \hyperref[UC5.20]{UC5.20}\\
-& \hyperref[UC5.20.1]{UC5.20.1}\\ \hline
+\hypertarget{RFD4.20.2}{RFD4.20.2} & l'attore può modificare il tipo della variabile relativa al blocco variabile &  \hyperlink{Interno}{Interno}\\
+& &\hyperref[UC5.20]{UC5.20}\\
+& &\hyperref[UC5.20.2]{UC5.20.2}\\ \hline
+
+\hypertarget{RFD4.20.3}{RFD4.20.3} & l'attore può modificare il valore della variabile relativa al blocco variabile &  \hyperlink{Interno}{Interno}\\
+& &\hyperref[UC5.20]{UC5.20}\\
+& &\hyperref[UC5.20.3]{UC5.20.3}\\ \hline
+
+\hypertarget{RFD4.20.4}{RFD4.20.4} & l'attore può confermare le modifiche apportate al blocco variabile &  \hyperlink{Interno}{Interno}\\
+& &\hyperref[UC5.20]{UC5.20}\\
+& &\hyperref[UC5.20.4]{UC5.20.4}\\ 
+& &\hyperref[UC5.1.4.1]{UC5.1.4.1}\\ \hline
+
+\hypertarget{RFD4.21}{RFD4.21} & l'attore può modificare un blocco metodo &  \hyperlink{Interno}{Interno}\\
+& &\hyperref[UC5]{UC5}\\
+& &\hyperref[UC5.21]{UC5.21}\\ \hline
+
+\hypertarget{RFD4.21.1}{RFD4.21.1} & l'attore può modificare il metodo relativo al blocco metodo &  \hyperlink{Interno}{Interno}\\
+& &\hyperref[UC5.21]{UC5.21}\\
+& &\hyperref[UC5.21.1]{UC5.21.1}\\ \hline
+
+\hypertarget{RFD4.21.2}{RFD4.21.2} & l'attore può modificare il commento relativo al blocco metodo &  \hyperlink{Interno}{Interno}\\
+& &\hyperref[UC5.21]{UC5.21}\\
+& &\hyperref[UC5.21.2]{UC5.21.2}\\ \hline
+
+\hypertarget{RFD4.21.3}{RFD4.21.3} & l'attore può confermare le modifiche apportate al blocco metodo &  \hyperlink{Interno}{Interno}\\
+& &\hyperref[UC5.21]{UC5.21}\\
+& &\hyperref[UC5.21.3]{UC5.21.3}\\
+& &\hyperref[UC5.2.3.1]{UC5.2.3.1}\\ \hline
+
+\hypertarget{RFD4.22}{RFD4.22} & l'attore può modificare un blocco if/else &  \hyperlink{Interno}{Interno}\\
+& &\hyperref[UC5]{UC5}\\
+& &\hyperref[UC5.22]{UC5.22}\\ \hline
+
+\hypertarget{RFD4.22.1}{RFD4.22.1} & l'attore può modificare la condizione relativo al blocco if/else &  \hyperlink{Interno}{Interno}\\
+& &\hyperref[UC5.22]{UC5.22}\\
+& &\hyperref[UC5.22.1]{UC5.22.1}\\ \hline
+
+\hypertarget{RFD4.22.2}{RFD4.22.2} & l'attore può modificare il commento relativo al blocco if/else &  \hyperlink{Interno}{Interno}\\
+& &\hyperref[UC5.22]{UC5.22}\\
+& &\hyperref[UC5.22.2]{UC5.22.2}\\ \hline
+
+\hypertarget{RFD4.22.3}{RFD4.22.3} & l'attore può confermare le modifiche apportate al blocco if/else &  \hyperlink{Interno}{Interno}\\
+& &\hyperref[UC5.22]{UC5.22}\\
+& &\hyperref[UC5.22.3]{UC5.22.3}\\
+& &\hyperref[UC5.3.5.1]{UC5.3.5.1}\\ \hline
+
+\hypertarget{RFD4.23}{RFD4.23} & l'attore può modificare un blocco while &  \hyperlink{Interno}{Interno}\\
+& &\hyperref[UC5]{UC5}\\
+& &\hyperref[UC5.23]{UC5.23}\\ \hline
+
+\hypertarget{RFD4.23.1}{RFD4.23.1} & l'attore può modificare la condizione relativa al blocco while &  \hyperlink{Interno}{Interno}\\
+& &\hyperref[UC5.23]{UC5.23}\\
+& &\hyperref[UC5.23.1]{UC5.23.1}\\ \hline
+
+\hypertarget{RFD4.23.2}{RFD4.23.2} & l'attore può modificare il commento relativo al blocco while &  \hyperlink{Interno}{Interno}\\
+& &\hyperref[UC5.23]{UC5.23}\\
+& &\hyperref[UC5.23.2]{UC5.23.2}\\ \hline
+
+\hypertarget{RFD4.23.3}{RFD4.23.3} & l'attore può confermare le modifiche apportate al blocco while &  \hyperlink{Interno}{Interno}\\
+& &\hyperref[UC5.23]{UC5.23}\\
+& &\hyperref[UC5.23.3]{UC5.23.3}\\ 
+& &\hyperref[UC5.4.4.1]{UC5.4.4.1}\\ \hline
+
+\hypertarget{RFD4.24}{RFD4.24} & l'attore può modificare un blocco for &  \hyperlink{Interno}{Interno}\\
+& &\hyperref[UC5]{UC5}\\
+& &\hyperref[UC5.24]{UC5.24}\\ \hline
+
+\hypertarget{RFD4.24.1}{RFD4.24.1} & l'attore può modificare l'inizializzazione relativa al blocco for &  \hyperlink{Interno}{Interno}\\
+& &\hyperref[UC5.24]{UC5.24}\\
+& &\hyperref[UC5.24.1]{UC5.24.1}\\ \hline
+
+\hypertarget{RFD4.24.2}{RFD4.24.2} & l'attore può modificare la condizione relativa al blocco for &  \hyperlink{Interno}{Interno}\\
+& &\hyperref[UC5.24]{UC5.24}\\
+& &\hyperref[UC5.24.2]{UC5.24.2}\\ \hline
+
+\hypertarget{RFD4.24.3}{RFD4.24.3} & l'attore può modificare il passo d'incremento/decremento relativo al blocco for &  \hyperlink{Interno}{Interno}\\
+& &\hyperref[UC5.24]{UC5.24}\\
+& &\hyperref[UC5.24.3]{UC5.24.3}\\ \hline
+
+\hypertarget{RFD4.24.4}{RFD4.24.4} & l'attore può modificare il commento relativo al blocco for &  \hyperlink{Interno}{Interno}\\
+& &\hyperref[UC5.24]{UC5.24}\\
+& &\hyperref[UC5.24.4]{UC5.24.4}\\ \hline
+
+\hypertarget{RFD4.24.5}{RFD4.24.5} & l'attore può confermare le modifiche relative al blocco for &  \hyperlink{Interno}{Interno}\\
+& &\hyperref[UC5.24]{UC5.24}\\
+& &\hyperref[UC5.24.5]{UC5.24.5}\\ 
+& &\hyperref[UC5.5.6.1]{UC5.5.6.1}\\ \hline
+
+\hypertarget{RFD4.25}{RFD4.25} & l'attore può modificare un blocco custom &  \hyperlink{Interno}{Interno}\\
+& &\hyperref[UC5]{UC5}\\
+& &\hyperref[UC5.25]{UC5.25}\\ \hline
+
+\hypertarget{RFD4.25.1}{RFD4.25.1} & l'attore può modificare il contenuto in codice relativo al blocco custom &  \hyperlink{Interno}{Interno}\\
+& &\hyperref[UC5.25]{UC5.25}\\
+& &\hyperref[UC5.25.1]{UC5.25.1}\\ \hline
+
+\hypertarget{RFD4.25.2}{RFD4.25.2} & l'attore può modificare il commento relativo al blocco custom &  \hyperlink{Interno}{Interno}\\
+& &\hyperref[UC5.25]{UC5.25}\\
+& &\hyperref[UC5.25.2]{UC5.25.2}\\ \hline
+
+\hypertarget{RFD4.25.3}{RFD4.25.3} & l'attore può confermare le modifiche apportate al blocco custom &  \hyperlink{Interno}{Interno}\\
+& &\hyperref[UC5.25]{UC5.25}\\
+& &\hyperref[UC5.25.3]{UC5.25.3}\\ \hline
 
 \hypertarget{RFO5}{RFO5} & l'attore può salvare il progetto &  \hyperlink{Interno}{Interno}\\
 & & \hyperref[UC6]{UC6}\\ \hline
