--- a/doc/Esterni/Piano_di_qualifica/diario.tex
+++ b/doc/Esterni/Piano_di_qualifica/diario.tex
@@ -3,11 +3,15 @@
 
 \begin{diario}
 	1.0.0 & {\LB} (Responsabile) & 09/01/2017 & Approvazione del documento \\ \hline
-	0.1.0 & {\PB} (Verificatore) & 05/01/2017 & Verifica del documento \\ \hline
-	0.0.6 & {\LS} (Analista) & 02/01/2017 & Stesura gestione amministrativa della revisione \\ \hline
-	0.0.5 & {\AZ} (Analista) & 02/01/2017 & Stesura resoconto dell'attività di verifica \\ \hline
-	0.0.4 & {\AZ} (Analista) & 30/12/2016 & Stesura definizione obiettivi di qualità \\ \hline
-	0.0.3 & {\LS} (Analista) & 29/12/2016 & Stesura strategie di verifica \\ \hline
+	0.2.0 & {\GG} (Verificatore) & 05/01/2017 & Verifica del documento \\ \hline
+	0.1.0 & {\LS} (Analista) & 09/01/2017 & Stesura resoconto attività \\ \hline
+	0.0.9 & {\AZ} (Analista) & 03/01/2017 & Stesura metriche di processo \\ \hline	
+	0.0.8 & {\LS} (Analista) & 03/01/2017 & Stesura metriche di prodotto \\ \hline
+	0.0.7 & {\AZ} (Analista) & 02/01/2017 & Stesura sezione risorse \\ \hline
+	0.0.6 & {\LS} (Analista) & 30/12/2016 & Stesura sezione procedure di controllo e obiettivi di qualità di prodotto \\ \hline
+	0.0.5 & {\AZ} (Analista) & 30/12/2016 & Stesura sezione procedure di controllo e obiettivi di qualità di processo \\ \hline
+	0.0.4 & {\LS} (Analista) & 29/12/2016 & Stesura sezione standard adottato in qualità di prodotto \\ \hline
+	0.0.3 & {\AZ} (Analista) & 29/12/2016 & Stesura sezione standard adottato in qualità di processo \\ \hline
 	0.0.2 & {\LS} (Analista) & 26/12/2016 & Stesura introduzione \\ \hline
 	0.0.1 & {\LS} (Analista) & 26/12/2016 & Stesura scheletro \\ \hline
 \end{diario}
