--- a/doc/Esterni/Piano_di_qualifica/Piano_di_qualifica_0_0_0.tex
+++ b/doc/Esterni/Piano_di_qualifica/Piano_di_qualifica_0_0_0.tex
@@ -128,7 +128,7 @@
 
 		\subsubsection{Obiettivi di qualità di processo}
 		In questa sezione vengono elencati i principali processi software identificati dal team sulla base dello standard ISO/IEC 12207:2008 e per ognuno di essi gli obiettivi di qualità perseguiti.
-			\paragraph{Pianificazione di Progetto e Processo di Verifica e Controllo }
+			\paragraph{Pianificazione di progetto e processo di verifica e controllo }
 			Questo macro-processo, derivato dall'unione dei processi 6.3.1 e 6.3.2 previsti dallo standard ISO/IEC 12207:2008, ha lo scopo di pianificare le attività richieste dal progetto.
 			\\Gli obiettivi di qualità stabiliti per questo processo sono i seguenti:
 
@@ -158,7 +158,7 @@
 				\subparagraph{Leggibilità della documentazione}
 				La documentazione prodotta sarà quanto più chiara e comprensibile a tutti gli \gloss{stakeholder} coinvolti nel progetto.
 			
-			\paragraph{Processo di Verifica del Software}
+			\paragraph{Processo di verifica del software}
 			Il processo, corrispondente al processo 7.2.4 definito dallo standard ISO/IEC 12207:2008, ha lo scopo di verificare se qualsiasi elemento del sistema soddisfa i requisiti ad esso correlati.
 			\\Gli obiettivi di qualità stabiliti per questo processo sono i seguenti:
 
@@ -261,7 +261,7 @@
 	
 
 		\subsubsection{Metriche per i processi}
-			\paragraph{Schedule Variance}
+			\paragraph{Schedule variance}
 			Tale metrica indica di quanto le macro-attività di progetto si discostano temporalmente rispetto alla pianificazione originaria definita nel documento \PdP . 
 			\\Viene calcolata come la
 differenza fra la data pianificata di fine di un’attività e la data
@@ -273,7 +273,7 @@ reale di fine di quell’attività: un valore di \textit{schedule variance} mino
 					\item Range di accettazione: $\geq{-10}$\%;
 				\end{itemize}
 
-			\paragraph{Budget Variance}
+			\paragraph{Budget variance}
 			Tale metrica indica quanto il costo di una particolare attività di progetto si discosta rispetto alla pianificazione originaria definita nel documento \PdP. 
 			\\Viene calcolata come la differenza fra il costo preventivato per un'attività e il costo effettivamente sostenuto per la stessa: un valore di \textit{budget variance} minore di zero indica che l'attività di progetto considerata sta richiedendo più risorse di quanto pianificato: se pari a zero indica invece che essa è perfettamente in linea con i costi previsti mentre se è addirittura strettamente positivo indica che sta procedendo con più efficienza di quanto considerato.
 			\\I range stabiliti per la metrica sono i seguenti:
@@ -294,7 +294,7 @@ reale di fine di quell’attività: un valore di \textit{schedule variance} mino
 					\item Range di accettazione: $\geq{3}$;
 				\end{itemize}
 				
-			\paragraph{Test di Unità eseguiti}
+			\paragraph{Test di unità eseguiti}
 			Tale metrica indica la percentuale di test di unità eseguiti.
 			\\La misura viene effettuata nel modo seguente:
 				\begin{equation}
@@ -306,7 +306,7 @@ reale di fine di quell’attività: un valore di \textit{schedule variance} mino
 					\item Range di accettazione: 85-100;
 				\end{itemize}
 				
-			\paragraph{Test di Integrazione eseguiti}
+			\paragraph{Test di integrazione eseguiti}
 				Tale metrica indica la percentuale di test di integrazione eseguiti.
 			\\La misura viene effettuata nel modo seguente:
 				\begin{equation}
@@ -318,7 +318,7 @@ reale di fine di quell’attività: un valore di \textit{schedule variance} mino
 					\item Range di accettazione: 55-100;
 				\end{itemize}
 				
-			\paragraph{Test di Sistema eseguiti}
+			\paragraph{Test di sistema eseguiti}
 			Tale metrica indica la percentuale di test di sistema eseguiti.
 			\\La misura viene effettuata nel modo seguente:
 				\begin{equation}
@@ -330,7 +330,7 @@ reale di fine di quell’attività: un valore di \textit{schedule variance} mino
 					\item Range di accettazione: 70-100;
 				\end{itemize}
 				
-			\paragraph{Test di Accettazione eseguiti}
+			\paragraph{Test di accettazione eseguiti}
 			Tale metrica indica la percentuale di test di accettazione eseguiti.
 			\\La misura viene effettuata nel modo seguente:
 				\begin{equation}
@@ -361,7 +361,7 @@ reale di fine di quell’attività: un valore di \textit{schedule variance} mino
 					\item Range di accettazione: 40-100;
 				\end{itemize}
 				
-			\paragraph{Copertura del Codice}
+			\paragraph{Copertura del codice}
 			Indica la percentuale di istruzioni che sono eseguite durante i test. Un'alta percentuale di istruzioni coperte dai test eseguiti comporta una maggiore probabilità che le componenti testate abbiano un ridotto numero di errori. Si può aumentare tale indice evitando di considerare i metodi che non richiedono test, come i metodi \textit{getter} e \textit{setter}.
 			I range stabiliti per la metrica sono i seguenti:
 				\begin{itemize}
@@ -542,8 +542,8 @@ reale di fine di quell’attività: un valore di \textit{schedule variance} mino
 	\hline
 	\textbf{Metriche di Processo}					&				&\\
 	\hline
-	~~Schedule Variance 							&$\geq{-10}$\%	&$\geq{0}$\\
-	~~Budget Variance 								&$\geq{-10}$\%	&$\geq{0}$\\
+	~~Schedule variance 							&$\geq{-10}$\%	&$\geq{0}$\\
+	~~Budget variance 								&$\geq{-10}$\%	&$\geq{0}$\\
 	~~Produttività di codifica 						&$\geq{10}$		&$\geq{3}$\\
 	~~Test di unità eseguiti						&85-100			&100-100\\
 	~~Test di integrazione eseguiti					&55-100			&70-100\\
