--- a/doc/Esterni/Piano_di_qualifica/Piano_di_qualifica_0_0_0.tex
+++ b/doc/Esterni/Piano_di_qualifica/Piano_di_qualifica_0_0_0.tex
@@ -533,8 +533,7 @@ reale di fine di quell’attività: un valore di \textit{schedule variance} mino
 				\item Range ottimale: 0-0;
 				\item Range di accettazione: 0-20;
 			\end{itemize}
-	
-	\newpage
+
 	\begin{table}
 	\begin{tabular}{|l|l|l|}
 	\hline
@@ -575,7 +574,7 @@ reale di fine di quell’attività: un valore di \textit{schedule variance} mino
 	\caption{Riepilogo delle metriche e dei range di accettazione e ottimali}
 	\end{table}
 	
-\newpage
+
 \section{Test}
 	\subsection{Tipi di test}
 	Sono stati individuati quattro tipologie di test:
@@ -586,4 +585,68 @@ reale di fine di quell’attività: un valore di \textit{schedule variance} mino
 		\item \textbf{Test di accettazione [TA]:} test per verificare che il prodotto soddisfi le richieste del proponente.
 	\end{itemize}
 	Si sottolinea che la specifica dei test delle diverse tipologie verrà inserita nel presente documento a seguito della fase di progettazione del prodotto in esame.
+
+\newpage
+\section{Resoconto attività di verifica}
+All'interno di questa sezione vengono riportati gli esiti delle attivit di verifica svolte sui processi attivati e sui relativi prodotti secondo quanto stabilito nel \PdP.
+	\subsection{Revisione dei requisiti}
+		\subsubsection{Verifica processo di documentazione}
+		Le attività di verifica svolte sui documenti prodotti in questa prima fase sono state di due tipi:
+		\begin{itemize}		
+			\item attività di verifica manuali;
+			\item attività di verifica automatizzate.
+		\end{itemize}
+		
+		Le prime sono state svolte dai verificatori assegnati ad ogni documento utilizzando la tecnica di 					analisi statica walkthrough. Grazie ad essa è stato possibile correggere una discreta quantità di 					errori e imprecisioni presenti all'interno dei documenti prodotti fra cui: 
+		\begin{itemize}	
+			\item nuovi termini da inserire nel glossario;
+			\item termini presenti nel glossario ma non correttamente segnati;
+			\item violazioni delle norme tipografiche e grammaticali come definite nel documento \NdP ;
+			\item refusi ed errori grammaticali;
+			\item periodi troppo lunghi e complessi da spezzare, ridurre e semplificare.
+		\end{itemize}
+		A partire dalla natura e frequenza degli errori identificati il gruppo ha iniziato a stilare una lista
+		di controllo da applicare nei successivi momenti di verifica nel contesto della strategia di verifica
+		inspection.
+
+		Le attività di verifica automatizzate, invece, sono state svolte calcolando l'indice Gulpease dei 	
+		diversi documenti prodotti attraverso l'uso di appositi strumenti web automatici. 
+		\\I risultati ottenuti sono elencati nella seguente tabella:
+		\begin{table}[h]
+		\begin{tabular}{|l|l|l|}
+		\hline
+		\textbf{Documento} 		&\textbf{Valutazione} &\textbf{Esito} \\
+		\hline
+		\PdQ 					&		&Superato\\
+		\NdP 					&		&Superato\\
+		\SdF 					&		&Superato\\	
+		\AdR 					&		&Superato\\
+		\PdQ 					&		&Superato\\
+		\Glossario 				&		&Superato\\
+		\textit{Verbali} 		&		&Superato\\
+		\hline
+		\end{tabular}
+		\caption{Esiti del calcolo dell'indice di Gulpease dei documenti consegnati}
+		\end{table}
+		
+		\subsubsection{Verifica processo di pianificazione di progetto e processo di verifica e controllo}
+		Per verificare il soddisfacimento degli obiettivi di qualita definiti per tale procesoo, a partire dal 				consultivo redatto nel \PdP sono stati calcolati gli indici di budget variance e schedule variance per 				ogniuna delle attività previste.
+		\\I risultati ottenuti sono elencati nella seguente tabella:	
+		\begin{table}[h]
+		\begin{tabular}{|l|l|l|}
+		\hline
+		\textbf{Documento} 		&\textbf{Schedule variance} &\textbf{Budget variance} \\
+		\hline
+		\PdQ 					&		&\\
+		\NdP 					&		&\\
+		\SdF 					&		&\\
+		\AdR 					&		&\\
+		\PdQ 					&		&\\
+		\Glossario 				&		&\\
+		\textit{Verbali.pdf} 		&		&\\
+		\hline
+		\end{tabular}
+		\caption{Esiti del calcolo degli indici di schedule e budget variance}
+		\end{table}
+	
 \end{document}
