--- a/doc/Esterni/Lettera/Lettera.tex
+++ b/doc/Esterni/Lettera/Lettera.tex
@@ -5,30 +5,30 @@
 \usepackage[italian]{babel}
 \usepackage{microtype}
 \usepackage{eurosym}
+\usepackage{siunitx}
 \usepackage{graphicx}
+\usepackage{hyperref}
 \usepackage{../../util/hx-macro}
 \usepackage{../../util/hx-vers}
-\address{Padova}
+\date{Padova, \today}
 \signature{\LB\\Responsabile \hx{}\\
 \includegraphics[scale=1]{../Piano_di_progetto/img/firmalb.jpg}}
 
 \begin{document}
 
-\begin{letter}{
-Prof. Tullio Vardanega\\
+\begin{letter}{Egr. Prof. Tullio Vardanega\\
 Università degli Studi di Padova\\
 Dipartimento di Matematica “Tullio Levi-Civita”\\
 via Trieste, 63\\
-35121 Padova
-}
+35121 Padova}
 
-\includegraphics[keepaspectratio=true,width=140px]{../../util/hivex_logo.png}
+\includegraphics[width=80px]{../../util/hivex_logo3.png}
 
 \opening{Egregio Professor Vardanega,}
 
-Con la presente, il gruppo \hx{} intende comunicarLe l'impegno alla realizzazione del prodotto \proj{} da Lei commissionato.
+Con la presente, il gruppo \hx{} intende comunicarLe la partecipazione al progetto didattico da Lei proposto e l'impegno alla realizzazione del prodotto \proj{} commissionato dall'azienda \ZU{} nel capitolato d'appalto C6 all'indirizzo \url{http://www.math.unipd.it/~tullio/IS-1/2016/Progetto/C6.pdf}.
 
-Si allegano i seguenti documenti:%, che trattano in maniera approfondita gli aspetti di pianifica, qualifica e analisi:
+Si allegano i seguenti documenti, che trattano in maniera approfondita gli aspetti di pianifica, normazione, qualifica e analisi:
 \begin{itemize}
 	\item \SdF;
 	\item \NdP;
@@ -39,7 +39,7 @@ Si allegano i seguenti documenti:%, che trattano in maniera approfondita gli asp
 	\item \Verbali.
 \end{itemize}
 
-Il gruppo \hx{} stima di consegnare il prodotto richiesto entro il 15 maggio 2017, con un preventivo di 12000\euro{} (euro), come analizzato nel documento \PdP.
+Il gruppo \hx{} stima di consegnare il prodotto richiesto entro il 15 maggio 2017 con un preventivo di \num{12000}\euro{} (euro), come analizzato nel documento \PdP.
 
 \closing{Distinti Saluti,}
 
