--- a/doc/util/hx-ambiente.tex
+++ b/doc/util/hx-ambiente.tex
@@ -27,7 +27,7 @@
 \setlength{\parindent}{0pt}
 % intestazione:
 \lhead{\Large{\proj}}
-\rhead{\includegraphics[keepaspectratio=true,width=50px]{../../util/hivex_logo.png}}
+\rhead{\includegraphics[keepaspectratio=true,width=50px]{../../util/hivex_logo2.png}}
 \renewcommand{\headrulewidth}{0.4pt}
 % pie' di pagina:
 \lfoot{\email}
