--- a/doc/Esterni/Verbali/diario.tex
+++ b/doc/Esterni/Verbali/diario.tex
@@ -3,6 +3,9 @@
 
 \begin{diario}
 	1.0.0 & {\LB} (Responsabile) & 09/01/2017 & Approvazione documento \\ \hline
-	0.1.0 & {\MM} (Verificatore) & 09/01/2017 & Verifica documento \\ \hline	
-	0.0.1 & {\PB} (Responsabile) & 09/01/2017 & Stesura verbali \\ \hline
+	0.1.0 & {\MM} (Verificatore) & 09/01/2017 & Verifica documento \\ \hline
+	0.0.3 & {\PB} (Responsabile) & 02/01/2017 & Stesura verbali del 23/12/2016 e del 02/01/2016 \\ \hline
+	0.0.3 & {\PB} (Responsabile) & 22/12/2016 & Stesura verbali del 15/12/2016, del 20/12/2016, del 21/12/2016 e del 22/12/2016 \\ \hline
+	0.0.2 & {\PB} (Responsabile) & 12/12/2016 & Stesura verbale del 12/12/2016 \\ \hline
+	0.0.1 & {\PB} (Responsabile) & 01/12/2016 & Stesura verbale del 29/11/2016 \\ \hline
 \end{diario}
