--- a/doc/util/hx-macro.sty
+++ b/doc/util/hx-macro.sty
@@ -21,7 +21,7 @@ L'editor dovrà infine essere fruibile dall'utente attraverso un browser desktop
 \newcommand{\presgloss}{
 Per rendere più semplice e chiara la comprensione ed evitare ogni ambiguità relativa ai termini utilizzati nei documenti, viene allegato il documento \Glossario, nel quale vengono raccolte le spiegazioni di termini tecnici o ambigui, di acronimi o abbreviazioni.
 
-Per rendere più facile la lettura, i termini presenti nel glossario saranno marcati con il pedice $\mathcal{G}$.
+Per rendere più facile la lettura, i termini presenti nel glossario saranno marcati con il pedice $g$.
 }
 
 % Membri del gruppo:
@@ -40,7 +40,7 @@ Per rendere più facile la lettura, i termini presenti nel glossario saranno mar
 \newcommand{\ZU}{Zucchetti S.P.A.}
 
 % Segnatura dei termini nel glossario:
-\newcommand{\gloss}[1]{\textsc{#1}\ped{$\mathcal{G}$}}
+\newcommand{\gloss}[1]{\textsc{#1}\ped{$g$}}
 
 % Ambiente da usare per il diario delle modifiche:
 \newenvironment{diario}{
